--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="utf-8">
-  <title>Portifolho</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="assets/VSCO Gothic-normal-400-100.ttf">
-  <link rel="stylesheet" type="text/css" href="assets/VSCO Gothic-normal-500-100.ttf">
-  <link rel="stylesheet" type="text/css" href="assets/VSCO Gothic-normal-600-100.ttf">
-  <link
+  <head>
+    <meta charset="utf-8" />
+    <title>Portifolho</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/VSCO Gothic-normal-400-100.ttf"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/VSCO Gothic-normal-500-100.ttf"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/VSCO Gothic-normal-600-100.ttf"
+    />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
       integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
