feat: update favicon

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
-    <title>Portifolho</title>
+    <title>Sarah Beatriz's</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -28,7 +28,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link type="image/png" rel="icon" href="icons8-cabeça-de-gato-16.png">
   </head>
   <body>
     <app-root></app-root>
